force-app/main/default/objects/sugati__Booking_Approval__c/sugati__Booking_Approval__c.object-meta.xml
<CustomObject>
    <label>Booking Approval</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Booking Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>