force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Approval_requested_from__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Approval_requested_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval requested from</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Approvals_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>