force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Approval_requested_margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Approval_requested_margin__c</fullName>
    <label>Approval requested margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>