force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Approver__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Approvals_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>