force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Approver_Type__c</fullName>
    <label>Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>