force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Decision__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>