force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>