force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Approvals</relationshipLabel>
    <relationshipName>Booking_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>