force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Primary_Booking_Approval__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Primary_Booking_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Booking Approval</label>
    <referenceTo>sugati__Booking_Approval__c</referenceTo>
    <relationshipLabel>Booking Approvals</relationshipLabel>
    <relationshipName>Secondary_Booking_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>