force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>