force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Record_URL__c</fullName>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>