force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Sent_to_secondary_approver__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Sent_to_secondary_approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this approval also been sent to the secondary approver?</description>
    <inlineHelpText>Has this approval also been sent to the secondary approver?</inlineHelpText>
    <label>Sent to secondary approver</label>
    <type>Checkbox</type>
</CustomField>