force-app/main/default/objects/sugati__Booking_Approval__c/fields/sugati__BA_Target_Margin_at_time_of_approval__c.field-meta.xml
<CustomField>
    <fullName>sugati__BA_Target_Margin_at_time_of_approval__c</fullName>
    <label>Target Margin at time of approval</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>